--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@ARTICLE{2022ApJS..259...64W,
+@ARTICLE{wong_patoka_2022,
        author = {{Wong}, George N. and {Prather}, Ben S. and {Dhruv}, Vedant and {Ryan}, Benjamin R. and {Mo{\'s}cibrodzka}, Monika and {Chan}, Chi-kwan and {Joshi}, Abhishek V. and {Yarza}, Ricardo and {Ricarte}, Angelo and {Shiokawa}, Hotaka and {Dolence}, Joshua C. and {Noble}, Scott C. and {McKinney}, Jonathan C. and {Gammie}, Charles F.},
         title = "{PATOKA: Simulating Electromagnetic Observables of Black Hole Accretion}",
       journal = {\apjs},
