--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,21 +1,13 @@
 ---
 ---
 
-@ARTICLE{wong_patoka_2022,
-       author = {{Wong}, George N. and {Prather}, Ben S. and {Dhruv}, Vedant and {Ryan}, Benjamin R. and {Mo{\'s}cibrodzka}, Monika and {Chan}, Chi-kwan and {Joshi}, Abhishek V. and {Yarza}, Ricardo and {Ricarte}, Angelo and {Shiokawa}, Hotaka and {Dolence}, Joshua C. and {Noble}, Scott C. and {McKinney}, Jonathan C. and {Gammie}, Charles F.},
-        title = "{PATOKA: Simulating Electromagnetic Observables of Black Hole Accretion}",
-      journal = {\apjs},
-     keywords = {Supermassive black holes, Accretion, Plasma astrophysics, Magnetohydrodynamics, Radiative transfer, Low-luminosity active galactic nuclei, Black hole physics, Computational methods, 1663, 14, 1261, 1964, 1335, 2033, 159, 1965, Astrophysics - High Energy Astrophysical Phenomena},
-         year = 2022,
-        month = apr,
-       volume = {259},
-       number = {2},
-          eid = {64},
-        pages = {64},
-          doi = {10.3847/1538-4365/ac582e},
-archivePrefix = {arXiv},
-       eprint = {2202.11721},
- primaryClass = {astro-ph.HE},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2022ApJS..259...64W},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@article{wong_patoka_2022,
+  title={PATOKA: Simulating electromagnetic observables of black hole accretion},
+  author={Wong, George N and Prather, Ben S and Dhruv, Vedant and Ryan, Benjamin R and Mo{\'s}cibrodzka, Monika and Chan, Chi-kwan and Joshi, Abhishek V and Yarza, Ricardo and Ricarte, Angelo and Shiokawa, Hotaka and others},
+  journal={The Astrophysical Journal Supplement Series},
+  volume={259},
+  number={2},
+  pages={64},
+  year={2022},
+  publisher={IOP Publishing}
 }
