second publication entry

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,3 +11,10 @@
   year={2022},
   publisher={IOP Publishing}
 }
+
+@article{prather_iharm3d_2021,
+  title={iharm3d: Vectorized general relativistic magnetohydrodynamics},
+  author={Prather, Ben S and Wong, George N and Dhruv, Vedant and Ryan, Benjamin R and Dolence, Joshua C and Ressler, Sean M and Gammie, Charles F},
+  journal={arXiv preprint arXiv:2110.10191},
+  year={2021}
+}
