--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
   number={2},
   pages={64},
   year={2022},
-  publisher={IOP Publishing}
+  publisher={IOP Publishing},
   arxiv={2202.11721},
   html={https://iopscience.iop.org/article/10.3847/1538-4365/ac582e}
 }
@@ -18,7 +18,7 @@
   title={iharm3d: Vectorized general relativistic magnetohydrodynamics},
   author={Prather, Ben S and Wong, George N and Dhruv, Vedant and Ryan, Benjamin R and Dolence, Joshua C and Ressler, Sean M and Gammie, Charles F},
   journal={arXiv preprint arXiv:2110.10191},
-  year={2021}
+  year={2021},
   arxiv={2110.10191},
   html={https://joss.theoj.org/papers/10.21105/joss.03336}
 }
