--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,16 @@
 ---
 ---
+@misc{dhruv_v3_grmhd_survey_2024,
+  title={A Survey of General Relativistic Magnetohydrodynamic Models for Black Hole Accretion Systems}, 
+  author={Vedant Dhruv and Ben Prather and George Wong and Charles F. Gammie},
+  year={2024},
+  eprint={2411.12647},
+  archivePrefix={arXiv},
+  primaryClass={astro-ph.HE},
+  arxiv={2411.12647},
+  html={https://arxiv.org/abs/2411.12647},
+  selected={true}
+}
 
 @article{wong_patoka_2022,
   title={PATOKA: Simulating electromagnetic observables of black hole accretion},
