--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,8 @@
   primaryClass={astro-ph.HE},
   arxiv={2411.12647},
   html={https://arxiv.org/abs/2411.12647},
-  selected={true}
+  selected={true},
+  preview={v3.png}
 }
 
 @article{wong_patoka_2022,
@@ -22,7 +23,8 @@
   year={2022},
   publisher={IOP Publishing},
   arxiv={2202.11721},
-  html={https://iopscience.iop.org/article/10.3847/1538-4365/ac582e}
+  html={https://iopscience.iop.org/article/10.3847/1538-4365/ac582e},
+  preview={patoka.png}
 }
 
 @article{prather_iharm3d_2021,
@@ -31,5 +33,6 @@
   journal={arXiv preprint arXiv:2110.10191},
   year={2021},
   arxiv={2110.10191},
-  html={https://joss.theoj.org/papers/10.21105/joss.03336}
+  html={https://joss.theoj.org/papers/10.21105/joss.03336},
+  preview={iharm3d.png}
 }
