--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,6 +13,45 @@
   preview={v3.png}
 }
 
+@ARTICLE{conroy_pattern_speed_2023,
+       author = {{Conroy}, Nicholas S. and {Baub{\"o}ck}, Michi and {Dhruv}, Vedant and {Lee}, Daeyoung and {Broderick}, Avery E. and {Chan}, Chi-kwan and {Georgiev}, Boris and {Joshi}, Abhishek V. and {Prather}, Ben and {Gammie}, Charles F.},
+        title = "{Rotation in Event Horizon Telescope Movies}",
+      journal = {The Astrophysical Journal},
+     keywords = {Black holes, Magnetohydrodynamical simulations, 162, 1966, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2023,
+        month = jul,
+       volume = {951},
+       number = {1},
+          eid = {46},
+        pages = {46},
+          doi = {10.3847/1538-4357/acd2c8},
+archivePrefix = {arXiv},
+       eprint = {2304.03826},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023ApJ...951...46C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+         html = {https://iopscience.iop.org/article/10.3847/1538-4357/acd2c8},
+      preview = {rotation.png}
+}
+
+@ARTICLE{SgrA_PaperV,
+       author = {{Event Horizon Telescope Collaboration} and {Akiyama}, Kazunori and {Alberdi}, Antxon and {Alef}, Walter and {Algaba}, Juan Carlos and {Anantua}, Richard and {Asada}, Keiichi and {Azulay}, Rebecca and {Bach}, Uwe and {Baczko}, Anne-Kathrin and {Ball}, David and {Balokovi{\'c}}, Mislav and {Barrett}, John and {Baub{\"o}ck}, Michi and {Benson}, Bradford A. and {Bintley}, Dan and {Blackburn}, Lindy and {Blundell}, Raymond and {Bouman}, Katherine L. and {Bower}, Geoffrey C. and {Boyce}, Hope and {Bremer}, Michael and {Brinkerink}, Christiaan D. and {Brissenden}, Roger and {Britzen}, Silke and {Broderick}, Avery E. and {Broguiere}, Dominique and {Bronzwaer}, Thomas and {Bustamante}, Sandra and {Byun}, Do-Young and {Carlstrom}, John E. and {Ceccobello}, Chiara and {Chael}, Andrew and {Chan}, Chi-kwan and {Chatterjee}, Koushik and {Chatterjee}, Shami and {Chen}, Ming-Tang and {Chen}, Yongjun and {Cheng}, Xiaopeng and {Cho}, Ilje and {Christian}, Pierre and {Conroy}, Nicholas S. and {Conway}, John E. and {Cordes}, James M. and {Crawford}, Thomas M. and {Crew}, Geoffrey B. and {Cruz-Osorio}, Alejandro and {Cui}, Yuzhu and {Davelaar}, Jordy and {De Laurentis}, Mariafelicia and {Deane}, Roger and {Dempsey}, Jessica and {Desvignes}, Gregory and {Dexter}, Jason and {Dhruv}, Vedant and {Doeleman}, Sheperd S. and {Dougal}, Sean and {Dzib}, Sergio A. and {Eatough}, Ralph P. and {Emami}, Razieh and {Falcke}, Heino and {Farah}, Joseph and {Fish}, Vincent L. and {Fomalont}, Ed and {Ford}, H. Alyson and {Fraga-Encinas}, Raquel and {Freeman}, William T. and {Friberg}, Per and {Fromm}, Christian M. and {Fuentes}, Antonio and {Galison}, Peter and {Gammie}, Charles F. and {Garc{\'\i}a}, Roberto and {Gentaz}, Olivier and {Georgiev}, Boris and {Goddi}, Ciriaco and {Gold}, Roman and {G{\'o}mez-Ruiz}, Arturo I. and {G{\'o}mez}, Jos{\'e} L. and {Gu}, Minfeng and {Gurwell}, Mark and {Hada}, Kazuhiro and {Haggard}, Daryl and {Haworth}, Kari and {Hecht}, Michael H. and {Hesper}, Ronald and {Heumann}, Dirk and {Ho}, Luis C. and {Ho}, Paul and {Honma}, Mareki and {Huang}, Chih-Wei L. and {Huang}, Lei and {Hughes}, David H. and {Ikeda}, Shiro and {Violette Impellizzeri}, C.~M. and {Inoue}, Makoto and {Issaoun}, Sara and {James}, David J. and {Jannuzi}, Buell T. and {Janssen}, Michael and {Jeter}, Britton and {Jiang}, Wu and {Jim{\'e}nez-Rosales}, Alejandra and {Johnson}, Michael D. and {Jorstad}, Svetlana and {Joshi}, Abhishek V. and {Jung}, Taehyun and {Karami}, Mansour and {Karuppusamy}, Ramesh and {Kawashima}, Tomohisa and {Keating}, Garrett K. and {Kettenis}, Mark and {Kim}, Dong-Jin and {Kim}, Jae-Young and {Kim}, Jongsoo and {Kim}, Junhan and {Kino}, Motoki and {Koay}, Jun Yi and {Kocherlakota}, Prashant and {Kofuji}, Yutaro and {Koch}, Patrick M. and {Koyama}, Shoko and {Kramer}, Carsten and {Kramer}, Michael and {Krichbaum}, Thomas P. and {Kuo}, Cheng-Yu and {La Bella}, Noemi and {Lauer}, Tod R. and {Lee}, Daeyoung and {Lee}, Sang-Sung and {Leung}, Po Kin and {Levis}, Aviad and {Li}, Zhiyuan and {Lico}, Rocco and {Lindahl}, Greg and {Lindqvist}, Michael and {Lisakov}, Mikhail and {Liu}, Jun and {Liu}, Kuo and {Liuzzo}, Elisabetta and {Lo}, Wen-Ping and {Lobanov}, Andrei P. and {Loinard}, Laurent and {Lonsdale}, Colin J. and {Lu}, Ru-Sen and {Mao}, Jirong and {Marchili}, Nicola and {Markoff}, Sera and {Marrone}, Daniel P. and {Marscher}, Alan P. and {Mart{\'\i}-Vidal}, Iv{\'a}n and {Matsushita}, Satoki and {Matthews}, Lynn D. and {Medeiros}, Lia and {Menten}, Karl M. and {Michalik}, Daniel and {Mizuno}, Izumi and {Mizuno}, Yosuke and {Moran}, James M. and {Moriyama}, Kotaro and {Moscibrodzka}, Monika and {M{\"u}ller}, Cornelia and {Mus}, Alejandro and {Musoke}, Gibwa and {Myserlis}, Ioannis and {Nadolski}, Andrew and {Nagai}, Hiroshi and {Nagar}, Neil M. and {Nakamura}, Masanori and {Narayan}, Ramesh and {Narayanan}, Gopal and {Natarajan}, Iniyan and {Nathanail}, Antonios and {Navarro Fuentes}, Santiago and {Neilsen}, Joey and {Neri}, Roberto and {Ni}, Chunchong and {Noutsos}, Aristeidis and {Nowak}, Michael A. and {Oh}, Junghwan and {Okino}, Hiroki and {Olivares}, H{\'e}ctor and {Ortiz-Le{\'o}n}, Gisela N. and {Oyama}, Tomoaki and {{\"O}zel}, Feryal and {Palumbo}, Daniel C.~M. and {Filippos Paraschos}, Georgios and {Park}, Jongho and {Parsons}, Harriet and {Patel}, Nimesh and {Pen}, Ue-Li and {Pesce}, Dominic W. and {Pi{\'e}tu}, Vincent and {Plambeck}, Richard and {PopStefanija}, Aleksandar and {Porth}, Oliver and {P{\"o}tzl}, Felix M. and {Prather}, Ben and {Preciado-L{\'o}pez}, Jorge A. and {Psaltis}, Dimitrios and {Pu}, Hung-Yi and {Ramakrishnan}, Venkatessh and {Rao}, Ramprasad and {Rawlings}, Mark G. and {Raymond}, Alexander W. and {Rezzolla}, Luciano and {Ricarte}, Angelo and {Ripperda}, Bart and {Roelofs}, Freek and {Rogers}, Alan and {Ros}, Eduardo and {Romero-Ca{\~n}izales}, Cristina and {Roshanineshat}, Arash and {Rottmann}, Helge and {Roy}, Alan L. and {Ruiz}, Ignacio and {Ruszczyk}, Chet and {Rygl}, Kazi L.~J. and {S{\'a}nchez}, Salvador and {S{\'a}nchez-Arg{\"u}elles}, David and {S{\'a}nchez-Portal}, Miguel and {Sasada}, Mahito and {Satapathy}, Kaushik and {Savolainen}, Tuomas and {Schloerb}, F. Peter and {Schonfeld}, Jonathan and {Schuster}, Karl-Friedrich and {Shao}, Lijing and {Shen}, Zhiqiang and {Small}, Des and {Sohn}, Bong Won and {SooHoo}, Jason and {Souccar}, Kamal and {Sun}, He and {Tazaki}, Fumie and {Tetarenko}, Alexandra J. and {Tiede}, Paul and {Tilanus}, Remo P.~J. and {Titus}, Michael and {Torne}, Pablo and {Traianou}, Efthalia and {Trent}, Tyler and {Trippe}, Sascha and {Turk}, Matthew and {van Bemmel}, Ilse and {van Langevelde}, Huib Jan and {van Rossum}, Daniel R. and {Vos}, Jesse and {Wagner}, Jan and {Ward-Thompson}, Derek and {Wardle}, John and {Weintroub}, Jonathan and {Wex}, Norbert and {Wharton}, Robert and {Wielgus}, Maciek and {Wiik}, Kaj and {Witzel}, Gunther and {Wondrak}, Michael F. and {Wong}, George N. and {Wu}, Qingwen and {Yamaguchi}, Paul and {Yoon}, Doosoo and {Young}, Andr{\'e} and {Young}, Ken and {Younsi}, Ziri and {Yuan}, Feng and {Yuan}, Ye-Fei and {Zensus}, J. Anton and {Zhang}, Shuo and {Zhao}, Guang-Yao and {Zhao}, Shan-Shan and {Chan}, Tin Lok and {Qiu}, Richard and {Ressler}, Sean and {White}, Chris},
+        title = "{First Sagittarius A* Event Horizon Telescope Results. V. Testing Astrophysical Models of the Galactic Center Black Hole}",
+      journal = {The Astrophysical Journal Letters},
+     keywords = {Black hole physics, Galactic center, 159, 565},
+         year = 2022,
+        month = may,
+       volume = {930},
+       number = {2},
+          eid = {L16},
+        pages = {L16},
+          doi = {10.3847/2041-8213/ac6672},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022ApJ...930L..16E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+         html = {https://iopscience.iop.org/article/10.3847/2041-8213/ac6672},
+      preview = {sgra.png}
+}
+
 @article{wong_patoka_2022,
   title={PATOKA: Simulating electromagnetic observables of black hole accretion},
   author={Wong, George N and Prather, Ben S and Dhruv, Vedant and Ryan, Benjamin R and Mo{\'s}cibrodzka, Monika and Chan, Chi-kwan and Joshi, Abhishek V and Yarza, Ricardo and Ricarte, Angelo and Shiokawa, Hotaka and others},
