--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -59,6 +59,7 @@ archivePrefix = {arXiv},
   volume={259},
   number={2},
   pages={64},
+  doi = {10.3847/1538-4365/ac582e},
   year={2022},
   publisher={IOP Publishing},
   arxiv={2202.11721},
@@ -71,7 +72,49 @@ archivePrefix = {arXiv},
   author={Prather, Ben S and Wong, George N and Dhruv, Vedant and Ryan, Benjamin R and Dolence, Joshua C and Ressler, Sean M and Gammie, Charles F},
   journal={arXiv preprint arXiv:2110.10191},
   year={2021},
+  doi = {10.21105/joss.03336},
   arxiv={2110.10191},
   html={https://joss.theoj.org/papers/10.21105/joss.03336},
   preview={iharm3d.png}
+}
+
+@ARTICLE{dhruv_supergranules_2019,
+       author = {{Dhruv}, Vedant and {Bhattacharya}, Jishnu and {Hanasoge}, Shravan M.},
+        title = "{Validating Time-Distance Helioseismic Inversions for Nonseparable Subsurface Profiles of an Average Supergranule}",
+      journal = {\apj},
+     keywords = {Supergranulation, Solar physics, Helioseismology, Solar interior, 1662, 1476, 709, 1500, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2019,
+        month = oct,
+       volume = {883},
+       number = {2},
+          eid = {136},
+        pages = {136},
+          doi = {10.3847/1538-4357/ab3a95},
+archivePrefix = {arXiv},
+       eprint = {1908.08456},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...883..136D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+         html = {https://iopscience.iop.org/article/10.3847/1538-4357/ab3a95},
+         preview = {supergranules.png}
+}
+
+@ARTICLE{khanapurkar_ecd_2018,
+       author = {{Khanapurkar}, Swanand and {Pradhan}, Arnab and {Dhruv}, Vedant and {Singh}, Tejinder P.},
+        title = "{Nonrelativistic limit of Einstein-Cartan-Dirac equations}",
+      journal = {\prd},
+     keywords = {General Relativity and Quantum Cosmology, High Energy Physics - Theory, Quantum Physics},
+         year = 2018,
+        month = nov,
+       volume = {98},
+       number = {10},
+          eid = {104027},
+        pages = {104027},
+          doi = {10.1103/PhysRevD.98.104027},
+archivePrefix = {arXiv},
+       eprint = {1804.04434},
+ primaryClass = {gr-qc},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018PhRvD..98j4027K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+         html = {https://ui.adsabs.harvard.edu/abs/2018PhRvD..98j4027K/abstract}
 }
