iharm3d pub img

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -96,13 +96,13 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...883..136D},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System},
          html = {https://iopscience.iop.org/article/10.3847/1538-4357/ab3a95},
-         preview = {supergranules.png}
+      preview = {supergranules.png}
 }
 
 @ARTICLE{khanapurkar_ecd_2018,
        author = {{Khanapurkar}, Swanand and {Pradhan}, Arnab and {Dhruv}, Vedant and {Singh}, Tejinder P.},
         title = "{Nonrelativistic limit of Einstein-Cartan-Dirac equations}",
-      journal = {\prd},
+      journal = {Physical Review D},
      keywords = {General Relativity and Quantum Cosmology, High Energy Physics - Theory, Quantum Physics},
          year = 2018,
         month = nov,
