updated v3 paper link and added couple of announcements

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,16 +1,23 @@
 ---
 ---
-@misc{dhruv_v3_grmhd_survey_2024,
-  title={A Survey of General Relativistic Magnetohydrodynamic Models for Black Hole Accretion Systems}, 
-  author={Vedant Dhruv and Ben Prather and George Wong and Charles F. Gammie},
-  year={2024},
-  eprint={2411.12647},
-  archivePrefix={arXiv},
-  primaryClass={astro-ph.HE},
-  arxiv={2411.12647},
-  html={https://arxiv.org/abs/2411.12647},
-  selected={true},
-  preview={v3.png}
+
+@ARTICLE{dhruv_v3_grmhd_survey_2024,
+       author = {{Dhruv}, Vedant and {Prather}, Ben and {Wong}, George N. and {Gammie}, Charles F.},
+        title = "{A Survey of General Relativistic Magnetohydrodynamic Models for Black Hole Accretion Systems}",
+      journal = {\apjs},
+     keywords = {Accretion, Supermassive black holes, Low-luminosity active galactic nuclei, Magnetohydrodynamical simulations, Relativistic fluid dynamics, 14, 1663, 2033, 1966, 1389, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2025,
+        month = mar,
+       volume = {277},
+       number = {1},
+          eid = {16},
+        pages = {16},
+          doi = {10.3847/1538-4365/adaea6},
+archivePrefix = {arXiv},
+       eprint = {2411.12647},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJS..277...16D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @ARTICLE{conroy_pattern_speed_2023,
