--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,8 @@ archivePrefix = {arXiv},
        eprint = {2411.12647},
  primaryClass = {astro-ph.HE},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJS..277...16D},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+      preview = {v3.png}
 }
 
 @ARTICLE{conroy_pattern_speed_2023,
