--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @ARTICLE{dhruv_v3_grmhd_survey_2024,
        author = {{Dhruv}, Vedant and {Prather}, Ben and {Wong}, George N. and {Gammie}, Charles F.},
         title = "{A Survey of General Relativistic Magnetohydrodynamic Models for Black Hole Accretion Systems}",
-      journal = {\apjs},
+      journal = {The Astrophysical Journal Supplement Series},
      keywords = {Accretion, Supermassive black holes, Low-luminosity active galactic nuclei, Magnetohydrodynamical simulations, Relativistic fluid dynamics, 14, 1663, 2033, 1966, 1389, Astrophysics - High Energy Astrophysical Phenomena},
          year = 2025,
         month = mar,
