--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,25 @@
 ---
 ---
 
+@ARTICLE{dhruv_egrmhd_2025,
+       author = {{Dhruv}, Vedant and {Prather}, Ben and {Chandra}, Mani and {Joshi}, Abhishek V. and {Gammie}, Charles F.},
+        title = "{Electromagnetic Observables of Weakly Collisional Black Hole Accretion}",
+      journal = {\apjl},
+     keywords = {Accretion, Black hole physics, Magnetohydrodynamical simulations, Plasma astrophysics, Relativistic fluid dynamics, Low-luminosity active galactic nuclei, 14, 159, 1966, 1261, 1389, 2033, High Energy Astrophysical Phenomena, Plasma Physics},
+         year = 2025,
+        month = nov,
+       volume = {993},
+       number = {1},
+          eid = {L33},
+        pages = {L33},
+          doi = {10.3847/2041-8213/ae1236},
+archivePrefix = {arXiv},
+       eprint = {2510.11365},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...993L..33D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{dhruv_v3_grmhd_survey_2024,
        author = {{Dhruv}, Vedant and {Prather}, Ben and {Wong}, George N. and {Gammie}, Charles F.},
         title = "{A Survey of General Relativistic Magnetohydrodynamic Models for Black Hole Accretion Systems}",
