--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,8 @@ archivePrefix = {arXiv},
        eprint = {2510.11365},
  primaryClass = {astro-ph.HE},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...993L..33D},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+      preview = {fancy_plot.jpeg}
 }
 
 @ARTICLE{dhruv_v3_grmhd_survey_2024,
