--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @ARTICLE{dhruv_egrmhd_2025,
        author = {{Dhruv}, Vedant and {Prather}, Ben and {Chandra}, Mani and {Joshi}, Abhishek V. and {Gammie}, Charles F.},
         title = "{Electromagnetic Observables of Weakly Collisional Black Hole Accretion}",
-      journal = {\apjl},
+      journal = {The Astrophysical Journal Letters},
      keywords = {Accretion, Black hole physics, Magnetohydrodynamical simulations, Plasma astrophysics, Relativistic fluid dynamics, Low-luminosity active galactic nuclei, 14, 159, 1966, 1261, 1389, 2033, High Energy Astrophysical Phenomena, Plasma Physics},
          year = 2025,
         month = nov,
